feat: add header

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,10 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src"
+    "src/**/*.ts",
+    "./typings"
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
