--- a/package.json
+++ b/package.json
@@ -157,6 +157,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.7",
     "less": "^4.1.1",
     "less-loader": "^5.0.0"
   }
